delete cloudinary image route
